--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>ยินดีต้อนรับ!</title>
+  <title>4zbv!</title>
   <meta charset="UTF-8">
   <style>
     body {
@@ -13,7 +13,7 @@
   </style>
 </head>
 <body>
-  <h1>สวัสดีครับ 👋</h1>
+  <h1>ควย 👋</h1>
   <p>นี่คือเว็บไซต์แรกของผมบน GitHub Pages!</p>
 </body>
 </html>
