--- a/index.html
+++ b/index.html
@@ -4,37 +4,39 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Profile Overlay</title>
-  <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
-  <!-- Font Awesome CDN -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 </head>
 <body class="bg-black text-white overflow-hidden">
 
-  <!-- Background Image -->
-  <div class="relative h-screen w-screen">
-    <img src="your-background.jpg" alt="Background" class="absolute inset-0 w-full h-full object-cover opacity-30">
-    <div class="absolute inset-0 bg-black bg-opacity-60"></div>
+  <!-- 🔥 วิดีโอพื้นหลัง -->
+  <video autoplay loop muted playsinline class="absolute inset-0 w-full h-full object-cover opacity-30 z-0">
+    <source src="background.mp4" type="video/mp4" />
+    Your browser does not support the video tag.
+  </video>
 
-    <!-- Centered Profile Card -->
-    <div class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-center">
-      <!-- Avatar -->
+  <!-- ชั้นมืดครอบวิดีโอ -->
+  <div class="absolute inset-0 bg-black bg-opacity-60 z-10"></div>
+
+  <!-- โปรไฟล์ Overlay -->
+  <div class="relative z-20 h-screen flex items-center justify-center text-center">
+    <div>
       <img src="avatar.png" alt="avatar" class="w-24 h-24 rounded-full mx-auto border-2 border-white shadow-lg">
 
-      <!-- Name & Status -->
-      <div class="mt-4">
-        <h1 class="text-xl font-semibold">4zbv <span class="text-purple-500">✔</span></h1>
-        <p class="text-sm text-gray-300">currently doing nothing 🌴</p>
-      </div>
+      <h1 class="mt-4 text-xl font-semibold">4zbv <span class="text-purple-500">✔</span></h1>
+      <p class="text-sm text-gray-300">currently doing nothing 🌴</p>
 
-      <!-- Social Icons -->
       <div class="mt-6 flex justify-center gap-6 text-2xl">
         <a href="#" class="hover:text-gray-300"><i class="fab fa-steam"></i></a>
         <a href="#" class="hover:text-gray-300"><i class="fab fa-tiktok"></i></a>
         <a href="#" class="hover:text-gray-300"><i class="fab fa-discord"></i></a>
         <a href="#" class="hover:text-gray-300"><i class="fab fa-github"></i></a>
-        <a href="#" class="hover:text-gray-300"><i class="fas fa-cube"></i></a> <!-- ใช้แทน Roblox -->
+        <a href="#" class="hover:text-gray-300"><i class="fas fa-cube"></i></a>
       </div>
+
+      <div class="mt-6 text-gray-400 text-sm">👁 440</div>
+    </div>
+  </div>
 
 </body>
 </html>
